--- a/src/quadrupleheap/.gitignore
+++ b/src/quadrupleheap/.gitignore
@@ -15,3 +15,7 @@
 /Scan.class
 /SpaceNotAvailableException.class
 /Tuple.class
+/QuadrupleHeapFile.class
+/Quadruple.class
+/THFPage.class
+/TScan.class
