--- a/src/Makefile
+++ b/src/Makefile
@@ -51,8 +51,9 @@ db:
 doc:
 	$(JAVADOC) $(DOCFILES)
 
+# cd tests; make bmtest dbtest; whoami; make hftest bttest indextest jointest sorttest sortmerge qftest
 test: 
-	cd tests; make bmtest dbtest; whoami; make hftest bttest indextest jointest sorttest sortmerge
+	cd tests; whoami; make qftest
 
 clean:
 	\rm -f $(CLASSPATH)/*.class *~ \#* core $(JARFILES) TRACE
