test makefile changes

--- a/src/Makefile
+++ b/src/Makefile
@@ -53,7 +53,7 @@ doc:
 
 # cd tests; make bmtest dbtest; whoami; make hftest bttest indextest jointest sorttest sortmerge qftest
 test: 
-	cd tests; make qftest
+	cd tests; make bmtest dbtest; whoami; make qftest
 
 clean:
 	\rm -f $(CLASSPATH)/*.class *~ \#* core $(JARFILES) TRACE
