--- a/src/Makefile
+++ b/src/Makefile
@@ -52,8 +52,9 @@ doc:
 	$(JAVADOC) $(DOCFILES)
 
 # cd tests; make bmtest dbtest; whoami; make hftest bttest indextest jointest sorttest sortmerge qftest
+# cd tests; make bmtest dbtest; whoami; make qftest
 test: 
-	cd tests; make bmtest dbtest; whoami; make qftest
+	cd tests; make bmtest dbtest; whoami; make hftest bttest indextest jointest sorttest sortmerge qftest
 
 clean:
 	\rm -f $(CLASSPATH)/*.class *~ \#* core $(JARFILES) TRACE
