--- a/src/tests/Makefile
+++ b/src/tests/Makefile
@@ -25,58 +25,58 @@ DBTest:DBTest.java
 dbtest: DBTest
 	$(JAVA) tests.DBTest
 
-# # test heapfile 
+# test heapfile 
 
-# HFTest:HFTest.java
-# 	$(JAVAC) TestDriver.java HFTest.java
+HFTest:HFTest.java
+	$(JAVAC) TestDriver.java HFTest.java
 
-# hftest: HFTest
-# 	$(JAVA) tests.HFTest
+hftest: HFTest
+	$(JAVA) tests.HFTest
 
-# # test btree
+# test btree
 
-# BTTest:BTTest.java
-# 	$(JAVAC) TestDriver.java BTTest.java
+BTTest:BTTest.java
+	$(JAVAC) TestDriver.java BTTest.java
 
-# bttest: BTTest
-# 	$(JAVA) tests.BTTest
+bttest: BTTest
+	$(JAVA) tests.BTTest
 
-# # test index
+# test index
 
-# IndexTest:IndexTest.java
-# 	$(JAVAC) TestDriver.java IndexTest.java
+IndexTest:IndexTest.java
+	$(JAVAC) TestDriver.java IndexTest.java
 
-# indextest: IndexTest
-# 	$(JAVA) tests.IndexTest
+indextest: IndexTest
+	$(JAVA) tests.IndexTest
 
-# # test join
+# test join
 
-# JoinTest:JoinTest.java
-# 	$(JAVAC) TestDriver.java JoinTest.java
+JoinTest:JoinTest.java
+	$(JAVAC) TestDriver.java JoinTest.java
 
-# jointest: JoinTest
-# 	$(JAVA) tests.JoinTest
+jointest: JoinTest
+	$(JAVA) tests.JoinTest
 
-# # test sort
+# test sort
 
-# SortTest:SortTest.java
-# 	$(JAVAC) TestDriver.java SortTest.java
+SortTest:SortTest.java
+	$(JAVAC) TestDriver.java SortTest.java
 
-# sorttest: SortTest
-# 	$(JAVA) tests.SortTest
+sorttest: SortTest
+	$(JAVA) tests.SortTest
 
-# # test sortMerge
+# test sortMerge
 
-# SMJoin:SM_JoinTest.java
-# 	$(JAVAC) SM_JoinTest.java TestDriver.java
+SMJoin:SM_JoinTest.java
+	$(JAVAC) SM_JoinTest.java TestDriver.java
 
-# sortmerge: SMJoin
-# 	$(JAVA) tests.SM_JoinTest
+sortmerge: SMJoin
+	$(JAVA) tests.SM_JoinTest
 
-QFTest:QuadrupleTest.java
-	$(JAVAC) TestDriver.java QuadrupleTest.java
+# QFTest:QuadrupleTest.java
+# 	$(JAVAC) TestDriver.java QuadrupleTest.java
 
-qftest: QFTest
-	$(JAVA) tests.QFTest
+# qftest: QFTest
+# 	$(JAVA) tests.QFTest
 
 
