QuadrupleTest makefile fix

--- a/src/tests/Makefile
+++ b/src/tests/Makefile
@@ -77,6 +77,6 @@ QFTest:QuadrupleTest.java
 	$(JAVAC) TestDriver.java QuadrupleTest.java
 
 qftest: QFTest
-	$(JAVA) tests.QFTest
+	$(JAVA) tests.QuadrupleTest
 
 
